py: file-> read block by block

--- a/Py/10Exceptions&&IO/file/py_file.ipynb
+++ b/Py/10Exceptions&&IO/file/py_file.ipynb
@@ -8,65 +8,148 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "cd '.\\Py\\10Exceptions&&IO\\file\\'  \n",
+    "jupyter nbconvert --to markdown py_file.ipynb --output README.md\n",
+    "\"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Basic\n",
+    "##  Basic\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "### Opening a File\n",
-    "\n",
+    "### Opening a File\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Python has a built-in function `open()` to open a file\n",
-    "- This function returns a file object, also called a file handle, as it is used to read or modify the file accordingly\n",
-    "\n",
-    "```python\n",
-    "f = open(\"ex.txt\")\n",
-    "```\n",
-    "\n",
+    "- This function returns a file object, also called a file handle, as it is used to read or modify the file accordingly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"read.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can specify the mode while opening a file. In mode, we specify whether we want to read `'r'`, write `'w'` or append `'x'` to the file. We also specify if we want to\n",
     "open the file in text mode or binary mode.\n",
     "\n",
     "There are 2 types of Files:\n",
     "\n",
     "- Text Files\n",
-    "- Binary Files\n",
+    "- Binary Files\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python File Modes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "### Python File Modes\n",
-    "\n",
-    "- 'r' Open a file for reading. (default)\n",
-    "- 'W' Open a file for writing. Creates a new file if it does not exist or truncates the file if it exists.\n",
-    "- 'a' Open for appending at the end of the file without truncating it. Creates a new file if it does not exist.\n",
-    "- 't' Open in text mode. (default)\n",
-    "- 'b' Open in binary mode.\n",
-    "- '+ Open a file for updating (reading and writing)\n",
-    "\n",
-    "```python\n",
-    "f = open(\"ex.txt\",'r')\n",
-    "f = open(\"ex.txt\",'w')\n",
-    "```\n",
-    "\n",
-    "### Closing a File\n",
-    "\n",
-    "Closing a file will free up the resources that were tied with the file and is done using the close() method.\n",
-    "Python has a garbage collector to clean up unreferenced objects but, we must not rely on it to close the file.\n",
-    "\n",
-    "```python\n",
-    "f = open(\"ex.txt\")\n",
-    "f.close\n",
-    "```\n",
-    "\n",
+    "- `'r'` Open a file for reading. (default)\n",
+    "- `'W'` Open a file for writing. Creates a new file if it does not exist or truncates the file if it exists.\n",
+    "- `'a'` Open for appending at the end of the file without truncating it. Creates a new file if it does not exist.\n",
+    "- `'t'` Open in text mode. (default)\n",
+    "- `'b'` Open in binary mode.\n",
+    "- `'+'` Open a file for updating (reading and writing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"read.txt\",'r')\n",
+    "f = open(\"write.txt\",'w')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closing a File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Closing a file will free up the resources that were tied with the file and is done using the `close()` method.\n",
+    "Python has a garbage collector to clean up unreferenced objects but, we must not rely on it to close the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"read.txt\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Context Managers (with)\n",
     "\n",
-    "-In Python, de-allocation of resources can be achieved by the usage of context managers which facilitate the\n",
+    "- In Python, de-allocation of resources can be achieved by the usage of context managers which facilitate the\n",
     "proper handling of resources. \n",
-    "-The most common way of performing file operations is by using the `with` keyword.\n",
+    "- The most common way of performing file operations is by using the `with` keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside:  False\n",
+      "Outside:  True\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "\n",
-    "```python\n",
     "with open('read.txt','r') as f:\n",
     "\tprint(\"Inside: \",f.closed) # `False`\n",
     "\n",
-    "print(\"Outside: \",f.closed) # `True` that means file is already closed\n",
-    "```\n"
+    "print(\"Outside: \",f.closed) # `True` that means file is already closed\n"
    ]
   },
   {
@@ -82,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -105,150 +188,446 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading from a file\n",
+    "## Reading from a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- You can read the content from a file using a method called `read()` ,`readline()`, `readlines()`.\n",
     "\n",
-    "- You can read the content from a file using a method called `read()` or `readlines()`."
+    "sample text:\n",
+    "\n",
+    "- This is line 1 sen-1. This is line 1 sen-2.\n",
+    "- This is line 2.\n",
+    "- This is line 3.\n",
+    "- This is line 4."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n",
-      "From file\n",
-      "\n",
-      "Hell\n",
-      "o Wor\n"
+      "This \n",
+      "is line 1 \n"
      ]
     }
    ],
    "source": [
     "with open('read.txt', 'r') as f:\n",
-    "\t\n",
-    "\t# reads complete data\n",
-    "\tdata= f.read()\n",
-    "\tprint(data)\n",
     "\n",
-    "print()\n",
-    "\n",
-    "with open('read.txt', 'r') as f:\n",
-    "\n",
-    "\t# reads only 4 chars\n",
-    "\tdata = f.read(4)\n",
-    "\tprint(data)\n",
-    "\t\n",
-    "\t# reads next 5 charaters\n",
+    "\t# reads only 5 chars\n",
     "\tdata = f.read(5)\n",
     "\tprint(data)\n",
-    "\t\n"
+    "\t\n",
+    "\t# reads next 10 charaters\n",
+    "\tdata = f.read(10)\n",
+    "\tprint(data)\n",
+    "\t"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The file handle\n",
+    "> The difference between `file.read()`, `file.readline()`, `file.readlines()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "- You can know the position of file handle with tell()\n",
-    "- You can change the position of file handle as well, seek(index)."
+    "|method  |workings  |\n",
+    "|---------|---------|\n",
+    "|`single_string = file.read()` |Reads **all the elements of the file** into a **single** `string`(`\\n` characters might be included). EX: `\"line 1\\n line 2\\n line3\\n\"` |\n",
+    "|`line = file.readline()` | **Reads the current line** where the cursor as a string is positioned and **moves to the next line**.  EX: `\"line 1\"` |\n",
+    "|` list_strings = file.readlines()`|  **Makes a `list` of strings**. EX: `['line 1\\n', 'line 2\\n', 'line3\\n'`]|\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "Hell\n",
-      "4\n",
-      "o Wor\n",
-      "\n",
-      "Hello World\n",
-      "From file\n"
+      "<class 'str'>\n",
+      "107\n",
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "This is line 2.\n",
+      "This is line 3.\n",
+      "This is line 4.\n",
+      "This is line 5.\n"
      ]
     }
    ],
    "source": [
     "with open('read.txt', 'r') as f:\n",
-    "\t# file handle at beginning\n",
-    "\tprint(f.tell())\n",
-    "\t\n",
-    "\t# read 4 chars\n",
-    "\tprint(f.read(4))\n",
-    "\t\n",
-    "\t# file handle now\n",
-    "\tprint(f.tell())\n",
-    "\tprint(f.read(5))\n",
-    "\t\n",
-    "\t# take file handle to the beginning\n",
-    "\tf.seek(0)\n",
-    "\t\n",
-    "\tprint()\n",
-    "\t# read all data\n",
-    "\tprint(f.read())\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reading content line by line"
+    "\t# reads complete data and stores as String\n",
+    "\tdata= f.read()\n",
+    "\tprint(type(data))\n",
+    "\tprint(len(data))\n",
+    "\tprint(data.strip())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n",
+      "<class 'str'>\n",
+      "44\n",
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
       "\n",
-      "From file\n"
+      "This is line 2.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('read.txt', 'r') as f:\n",
+    "\t\n",
+    "\t# reads 1 line at a time\n",
+    "\tdata= f.readline()\n",
+    "\tprint(type(data))\n",
+    "\tprint(len(data))\n",
+    "\tprint(data)\n",
+    "\t\n",
+    "\t# reads 2nd lien\n",
+    "\tdata= f.readline()\n",
+    "\tprint(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['This is line 1 sen-1. This is line 1 sen-2.\\n', 'This is line 2.\\n', 'This is line 3.\\n', 'This is line 4.\\n', 'This is line 5.']\n",
+      "Total lines:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('read.txt', 'r') as f:\n",
+    "\t\n",
+    "\t# reads complete data and stores in list\n",
+    "\tdata= f.readlines()\n",
+    "\tprint(type(data))\n",
+    "\tprint(data)\n",
+    "\tprint(\"Total lines: \",len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total lines:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total lines: \",len(open(\"read.txt\").readlines()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read line by line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### using for loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "This is line 2.\n",
+      "This is line 3.\n",
+      "This is line 4.\n",
+      "This is line 5.\n"
      ]
     }
    ],
    "source": [
     "with open('read.txt', 'r') as f:\n",
     "\tfor line in f:\n",
-    "\t\tprint(line)"
+    "\t\tprint(line.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hello World\\n', 'From file']\n",
+      "0 This is line 1 sen-1. This is line 1 sen-2.\n",
+      "1 This is line 2.\n",
+      "2 This is line 3.\n",
+      "3 This is line 4.\n",
+      "4 This is line 5."
+     ]
+    }
+   ],
+   "source": [
+    "with open('read.txt', 'r') as f:\n",
+    "\tfor i, l in enumerate(f):\n",
+    "\t\tprint(i, l, end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### using `readline()`, `readlines()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "This is line 2.\n",
+      "This is line 3.\n",
+      "This is line 4.\n",
+      "This is line 5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('read.txt', 'r') as f:\n",
+    "\tline = f.readline()\n",
+    "\tprint(type(line))\n",
+    "\t\n",
+    "\twhile line:\n",
+    "\t\tprint(line.strip())\n",
+    "\t\tline = f.readline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'list'>\n",
-      "Hello World\n",
-      "From file"
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "This is line 2.\n",
+      "This is line 3.\n",
+      "This is line 4.\n",
+      "This is line 5.\n"
      ]
     }
    ],
    "source": [
     "with open('read.txt', 'r') as f:\n",
     "\tdata = f.readlines()\n",
-    "\tprint(data)\n",
     "\tprint(type(data))\n",
     "\t\n",
     "\tfor line in data:\n",
-    "\t\tprint(line,end=\"\")\n"
+    "\t\t# print(line,end=\"\")\n",
+    "\t\tprint(line.strip())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The file handle\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**File handle** is like a `cursor`, which defines from where the data has to be read or written in the file. \n",
+    " \n",
+    "1. `tell()`: **current the position** \n",
+    "2. `f.seek(offset, from_what)`:\n",
+    "   -  **change the position** of the File Handle to a given specific position.\n",
+    "   - `Offset`: Number of positions to move forward \n",
+    "   - `from_what`: It defines point of reference `0,1,2`.\n",
+    "       - `0`: sets the reference point at the `beginning` of the file \n",
+    "       - `1`: sets the reference point at the `current` file position\n",
+    "       - `2`: sets the reference point at the `end` of the file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current pos: 0\n",
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "current pos: 45\n",
+      "current pos: 0\n",
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "current pos: 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('read.txt', 'r') as f:\n",
+    "\t# file handle at beginning\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\tprint(f.readline().strip())\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\n",
+    "\t# take file handle to the beginning\n",
+    "\tf.seek(0)\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\tprint(f.readline().strip())\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107\n",
+      "current pos: 0\n",
+      "This is line 1 sen-1. This is line 1 sen-2.\n",
+      "current pos: 45\n",
+      "current pos: 10\n",
+      "ne 1 sen-1. This is line 1 sen-2.\n",
+      "current pos: 45\n",
+      "current pos: 45\n",
+      "This is line 2.\n",
+      "current pos: 62\n",
+      "current pos: 111\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('read.txt', 'r') as f:\n",
+    "\tprint(len(f.read()))\n",
+    "\tf.seek(0)\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\tprint(f.readline().strip())\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\n",
+    "\tf.seek(10)\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\tprint(f.readline().strip())\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\n",
+    "\tf.seek(0,1)\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\tprint(f.readline().strip())\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\n",
+    "\tf.seek(0,2)\n",
+    "\tprint(\"current pos:\",f.tell())\n",
+    "\tprint(f.readline().strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read Block by Block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "14\n",
+      "14\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_blocks = 4\n",
+    "with open('read_block.txt', 'r') as f:\n",
+    "\tfor block in range(number_of_blocks):\n",
+    "\t\tf.seek(0,2)\n",
+    "\t\tfile_size = f.tell() # total no of characters\n",
+    "\t\tprint(file_size)\t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_blocks = 10\n",
+    "\n",
+    "with open('read_block.txt', 'r') as f:\n",
+    "\tfor block in range(number_of_blocks):\n",
+    "\t\t# print(block,100  * '=')\n",
+    "\t\tf.seek(block*(file_size//number_of_blocks),0)\n",
+    "\t\tdata = f.read(file_size//number_of_blocks)\n",
+    "\t\t# print(data)\n",
+    "\t\t# print(len(data.strip()))\n",
+    "\n",
+    "\t"
    ]
   },
   {
