py: read file in block of lines

--- a/Py/10Exceptions&&IO/file/py_file.ipynb
+++ b/Py/10Exceptions&&IO/file/py_file.ipynb
@@ -588,46 +588,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14\n",
-      "14\n",
-      "14\n",
-      "14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "number_of_blocks = 4\n",
+    "out = open('read_block_ws_removed.txt', 'w')\n",
     "with open('read_block.txt', 'r') as f:\n",
-    "\tfor block in range(number_of_blocks):\n",
-    "\t\tf.seek(0,2)\n",
-    "\t\tfile_size = f.tell() # total no of characters\n",
-    "\t\tprint(file_size)\t"
+    "\tdata = f.read()\n",
+    "\t# print(len(data.split()))\n",
+    "\ttotal_word = len(data.split())\n",
+    "\tdata = data.split()\n",
+    "\tindices = []\n",
+    "\tfor i,w in enumerate(data):\n",
+    "\t\t# start reading from CHAPTER I.\n",
+    "\t\tif \"I.\" in w:\n",
+    "\t\t\tindices.append(i)\n",
+    "\tlast = indices[-1]\n",
+    "\t# print(last)\n",
+    "\tdata = data[last+1:]\n",
+    "\t\n",
+    "\tn=10\n",
+    "\tfor i in range(n):\n",
+    "\t\ts = round(total_word*i/n)\n",
+    "\t\te = round(total_word*(1+i)/n)\n",
+    "\t\t# print(s,e)\n",
+    "\t\tchunks = data[s:e]\n",
+    "\t\tchunks = \" \".join(chunks)\n",
+    "\t\tprint(chunks,file=out)\n",
+    "\t\tprint(100*\"=\",file=out)\n",
+    "\t\t\n",
+    "out.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find info from File"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Robert C. (Chamblet) Adams'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_blocks = 10\n",
-    "\n",
-    "with open('read_block.txt', 'r') as f:\n",
-    "\tfor block in range(number_of_blocks):\n",
-    "\t\t# print(block,100  * '=')\n",
-    "\t\tf.seek(block*(file_size//number_of_blocks),0)\n",
-    "\t\tdata = f.read(file_size//number_of_blocks)\n",
-    "\t\t# print(data)\n",
-    "\t\t# print(len(data.strip()))\n",
-    "\n",
-    "\t"
+    "author_name=\"\"\n",
+    "with open(\"read_block.txt\", 'r') as target_file:\n",
+    "\tfor num, line in enumerate(target_file.readlines()):\n",
+    "\t\tif str(\"Author\") in line:\n",
+    "\t\t\tauthor_name = line.split(\":\")[1].strip()\n",
+    "author_name"
    ]
   },
   {
