--- a/Py/10Exceptions&&IO/file/py_file.ipynb
+++ b/Py/10Exceptions&&IO/file/py_file.ipynb
@@ -905,24 +905,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'temp_new.txt'"
+       "'rename.txt'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file = \"temp.txt\"\n",
-    "new_file = file.replace(\".txt\",\"_new.txt\")\n",
+    "file = \"rename_new.txt\"\n",
+    "new_file = file.replace(\"_new.txt\",\".txt\")\n",
     "new_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rename(file,new_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['py_file.ipynb',\n",
+       " 'read.txt',\n",
+       " 'README.md',\n",
+       " 'read_block.txt',\n",
+       " 'read_block_mod.txt',\n",
+       " 'read_block_original.txt',\n",
+       " 'rename.txt',\n",
+       " 'temp.txt',\n",
+       " 'write.txt']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\CSE\\\\Others\\\\Codes\\\\Py\\\\10Exceptions&&IO\\\\file'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
    ]
   }
  ],
