Py: file->Rename Files having same name in different directories

--- a/Py/10Exceptions&&IO/file/py_file.ipynb
+++ b/Py/10Exceptions&&IO/file/py_file.ipynb
@@ -990,6 +990,104 @@
    "source": [
     "os.getcwd()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename Files having same name in different directories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "|--folderA\t\t\t\t\t\t\t\t\n",
+    "| |--file.pdf\t\t\t\t\t\t\n",
+    "|--folderB \t\t\t\t\t\t\t\t\n",
+    "| |--file.pdf\t\t\n",
+    "|--folderC \t\t\t\t\t\t\t\t\n",
+    "| |--file.pdf \t\t\t\t\t\t\t\n",
+    "....\n",
+    "```\n",
+    "\n",
+    "to be renamed as:\n",
+    " \t\n",
+    "```\n",
+    "|--folderA\t\t\t\t\t\t\t\t\n",
+    "| |--folderA-file.pdf\t\t\t\t\t\t\n",
+    "|--folderB \t\t\t\t\t\t\t\t\n",
+    "| |--folderB-file.pdf\t\t\n",
+    "|--folderC \t\t\t\t\t\t\t\t\n",
+    "| |--folderC-file.pdf \t\t\t\t\t\t\t\n",
+    "....\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from turtle import bgcolor\n",
+    "class bcolors:\n",
+    "    HEADER = '\\033[95m'\n",
+    "    OKBLUE = '\\033[94m'\n",
+    "    OKCYAN = '\\033[96m'\n",
+    "    OKGREEN = '\\033[92m'\n",
+    "    WARNING = '\\033[93m'\n",
+    "    FAIL = '\\033[91m'\n",
+    "    ENDC = '\\033[0m'\n",
+    "    BOLD = '\\033[1m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "\n",
+    "# import sys\n",
+    "# try:\n",
+    "#     directory_name=sys.argv[1:]\n",
+    "#     print(directory_name)\n",
+    "# except:\n",
+    "#     print('Please pass directory_name')\n",
+    "import argparse\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument(\"-e\",\"--ext\", help=\"Provide extention name i.e. text,pdf\") \t# naming it \"path\"\n",
+    "args = parser.parse_args()\n",
+    "extension_name=None\n",
+    "if not args.ext:\n",
+    "    parser.error('--ext, -e is required. For help -h')\n",
+    "extension_name=\".\"+str(args.ext)\n",
+    "curr_dir_path = os.getcwd()\n",
+    "\n",
+    "for root, subdirs, files in os.walk(curr_dir_path):\n",
+    "    for current_file in files:\n",
+    "        if(current_file.endswith(extension_name)):\n",
+    "            current_folder =  root.split(\"\\\\\")[-1]\n",
+    "            current_file_path = os.path.join(root,current_file)\n",
+    "            new_name = current_folder.lower()+\"-\"+current_file\n",
+    "            new_name_path = os.path.join(root,new_name)\n",
+    "            os.rename(current_file_path, new_name_path)\n",
+    "            print(bcolors.OKGREEN+f\"Renamed: {current_file} ----> {new_name}\"+bcolors.ENDC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "command:\n",
+    "\n",
+    "```\n",
+    "python main.py --ext=pdf\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
