--- a/Py/08modules/built_in/os/py_os.ipynb
+++ b/Py/08modules/built_in/os/py_os.ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OS module"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "cd .\\Py\\08modules\\built_in\\os\\\n",
+    "jupyter nbconvert --to markdown py_os.ipynb --output README.md\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +35,13 @@
    "source": [
     "import os\n",
     "print(dir(os))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Current Directory"
    ]
   },
   {
@@ -39,6 +65,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `os.path.join()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home\\User/Desktop\\file.txt\n",
+      "/home\\file.txt\n",
+      "/home\n",
+      "/home\\User/Public/Documents\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Path\n",
+    "path = \"/home\"\n",
+    "\n",
+    "# Join various path components\n",
+    "print(os.path.join(path, \"User/Desktop\", \"file.txt\"))## /home\\User/Desktop\\file.txt\n",
+    "\n",
+    "\n",
+    "# Path\n",
+    "path = \"User/Documents\"\n",
+    "\n",
+    "# Join various path components\n",
+    "print(os.path.join(path, \"/home\", \"file.txt\")) # /home\\file.txt\n",
+    "\n",
+    "# In above example '/home'\n",
+    "# represents an absolute path\n",
+    "# so all previous components i.e User / Documents\n",
+    "# are thrown away and joining continues\n",
+    "# from the absolute path component i.e / home.\n",
+    "\n",
+    "\n",
+    "# Path\n",
+    "path = \"/User\"\n",
+    "\n",
+    "# Join various path components\n",
+    "print(os.path.join(path, \"Downloads\", \"file.txt\", \"/home\")) # /home\n",
+    "# In above example '/User' and '/home'\n",
+    "# both represents an absolute path\n",
+    "# but '/home' is the last value\n",
+    "# so all previous components before '/home'\n",
+    "# will be discarded and joining will\n",
+    "# continue from '/home'\n",
+    "\n",
+    "# Path\n",
+    "path = \"/home\"\n",
+    "\n",
+    "# Join various path components\n",
+    "print(os.path.join(path, \"User/Public/\", \"Documents\", \"\"))  \n",
+    "# /home\\User/Public/Documents\\\n",
+    "\n",
+    "# In above example the last\n",
+    "# path component is empty\n",
+    "# so a directory separator ('/')\n",
+    "# will be put at the end\n",
+    "# along with the concatenated value\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make New Directory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -48,23 +151,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get the list of all files and dir. in the specified directory."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['newly_created', 'py_os.ipynb']"
+       "['newly_created', 'py_os.ipynb', 'README.md']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['newly_created', 'py_os.ipynb', 'README.md']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `os.walk()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "<img src=\"img/oswalk.jpg\" alt=\"oswalk.jpg\" width=\"300px\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\CSE\\\\Others\\\\Codes\\\\Py\\\\08modules\\\\built_in\\\\os\\\\test'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_path = os.path.join(os.getcwd(), \"test\")\n",
+    "test_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\CSE\\Others\\Codes\\Py\\08modules\\built_in\\os\\test\n",
+      "['A', 'B']\n",
+      "['test1.txt']\n",
+      "____________________________________\n",
+      "d:\\CSE\\Others\\Codes\\Py\\08modules\\built_in\\os\\test\\A\n",
+      "['A1', 'A2']\n",
+      "[]\n",
+      "____________________________________\n",
+      "d:\\CSE\\Others\\Codes\\Py\\08modules\\built_in\\os\\test\\A\\A1\n",
+      "['A11']\n",
+      "['test3.txt']\n",
+      "____________________________________\n",
+      "d:\\CSE\\Others\\Codes\\Py\\08modules\\built_in\\os\\test\\A\\A1\\A11\n",
+      "[]\n",
+      "[]\n",
+      "____________________________________\n",
+      "d:\\CSE\\Others\\Codes\\Py\\08modules\\built_in\\os\\test\\A\\A2\n",
+      "[]\n",
+      "['test4.txt']\n",
+      "____________________________________\n",
+      "d:\\CSE\\Others\\Codes\\Py\\08modules\\built_in\\os\\test\\B\n",
+      "[]\n",
+      "['test2.txt']\n",
+      "____________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (root,dirs,files) in os.walk(test_path, topdown=True):\n",
+    "        print(root)\n",
+    "        print(dirs)\n",
+    "        print(files)\n",
+    "        print(\"____________________________________\")\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove"
    ]
   },
   {
@@ -76,70 +296,6 @@
     "# os.remove()\n",
     "# os.removedirs()\n",
     "# os.rename()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['d:\\\\CSE\\\\Others\\\\Codes\\\\Py\\\\08modules\\\\built_in\\\\os',\n",
-       " 'c:\\\\Users\\\\soiko\\\\.vscode\\\\extensions\\\\ms-toolsai.jupyter-2021.9.1101343141\\\\pythonFiles',\n",
-       " 'c:\\\\Users\\\\soiko\\\\.vscode\\\\extensions\\\\ms-toolsai.jupyter-2021.9.1101343141\\\\pythonFiles\\\\lib\\\\python',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\python38.zip',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\DLLs',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3',\n",
-       " '',\n",
-       " 'C:\\\\Users\\\\soiko\\\\AppData\\\\Roaming\\\\Python\\\\Python38\\\\site-packages',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\locket-0.2.1-py3.8.egg',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\win32',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\Pythonwin',\n",
-       " 'C:\\\\ProgramData\\\\Anaconda3\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
-       " 'C:\\\\Users\\\\soiko\\\\.ipython']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sys.path"
    ]
   }
  ],
@@ -161,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   },
   "orig_nbformat": 2
  },
