--- a/Py/10Exceptions&&IO/file/py_file.ipynb
+++ b/Py/10Exceptions&&IO/file/py_file.ipynb
@@ -900,7 +900,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Change File Name"
+    "## Rename File and Folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rename file: `os.rename(old_file_name, new_file_name)`\n",
+    "\n",
+    "Rename folder: `os.rename(old_folder_name, new_folder_name)`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ex: rename file `\"rename_old.txt\"` to `\"rename.txt\"`"
    ]
   },
   {
@@ -920,8 +943,8 @@
     }
    ],
    "source": [
-    "file = \"rename_new.txt\"\n",
-    "new_file = file.replace(\"_new.txt\",\".txt\")\n",
+    "file = \"rename_old.txt\"\n",
+    "new_file = file.replace(\"_old.txt\",\".txt\")\n",
     "new_file"
    ]
   },
@@ -972,23 +995,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d:\\\\CSE\\\\Others\\\\Codes\\\\Py\\\\10Exceptions&&IO\\\\file'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "os.getcwd()"
+    "### Rename Folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EX: rename folder\n",
+    "\n",
+    "`[Kotlin 1.2 Android 4.3.1]  Kotlin Coroutines - Fundamentals (2020.04.30)`\n",
+    "\n",
+    "to ->\n",
+    "\n",
+    "`Kotlin Coroutines - Fundamentals (2020.04.30)`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import argparse\n",
+    "parser = argparse.ArgumentParser()\n",
+    "# naming it \"path\"\n",
+    "parser.add_argument(\n",
+    "    \"-f\", \"--find\", help=\"Provide extention name i.e. text,pdf\")\n",
+    "args = parser.parse_args()\n",
+    "\n",
+    "\n",
+    "to_find = None\n",
+    "if not args.find:\n",
+    "    parser.error('--find, -f is required. For help -h')\n",
+    "to_find = args.find\n",
+    "\n",
+    "\n",
+    "cur_dir_path = os.getcwd()\n",
+    "dirs = os.listdir(cur_dir_path)\n",
+    "for current_dir in dirs:\n",
+    "    # at = current_dir.find(\"]\")\n",
+    "    at = current_dir.find(to_find)\n",
+    "    if at != -1:\n",
+    "        new_dir = current_dir[at+1:].strip()\n",
+    "        os.rename(current_dir, new_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run: `python main.py --find=]` or `python main.py -f=]`"
    ]
   },
   {
