py: weighted cost bfs

--- a/Py/03list/py_list.ipynb
+++ b/Py/03list/py_list.ipynb
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1444,15 +1444,15 @@
     "]\n",
     "for i, r in enumerate(AdjMatrix):\n",
     "\tprint(f\"{nodes[i]} ->\", end=\"\")\n",
-    "\tfor i, c in enumerate(r):\n",
+    "\tfor j, c in enumerate(r):\n",
     "\t\tif(c == 1):\n",
-    "\t\t\tprint(nodes[i], end=\"\")\n",
+    "\t\t\tprint(nodes[j], end=\"\")\n",
     "\tprint()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,109 @@
     "\t\t\t\tp[i] = current_node\n",
     "\n",
     "\tcolour[current_node] = 2\n",
-    "\tPrintTable()\n"
+    "\tPrintTable()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With Weighted Cost:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "<img src=\"img/bfswc.jpg\" alt=\"bfswc.jpg\" width=\"500px\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A ->E(5) H(2) \n",
+      "E ->H(8) F(20) \n",
+      "H ->F(3) C(5) \n",
+      "F ->C(1) \n",
+      "C ->\n"
+     ]
+    }
+   ],
+   "source": [
+    "nodes = [\"A\", \"E\", \"H\", \"F\", \"C\"]\n",
+    "AdjMatrix = [\n",
+    "  #  A  E  H  F  C \n",
+    "    [0, 1, 1, 0, 0], # A\n",
+    "\t[0, 0, 1, 1, 0], # E\n",
+    "    [0, 0, 0, 1, 1], # H\n",
+    "    [0, 0, 0, 0, 1], # F\n",
+    "    [0, 0, 0, 0, 0]  # C\n",
+    "]\n",
+    "cost = [\n",
+    "  #  A  E  H  F  C\n",
+    "    [0, 5, 2, 0, 0],   # A\n",
+    "   \t[0, 0, 8, 20, 0],  # E\n",
+    "    [0, 0, 0, 3, 5],   # H\n",
+    "    [0, 0, 0, 0, 1],   # F\n",
+    "    [0, 0, 0, 0, 0]    # C\n",
+    "]\n",
+    "\n",
+    "for i, r in enumerate(AdjMatrix):\n",
+    "\tprint(f\"{nodes[i]} ->\", end=\"\")\n",
+    "\tfor j, c in enumerate(r):\n",
+    "\t\tif(c == 1):\n",
+    "\t\t\tprint(nodes[j], end=\"\")\n",
+    "\t\t\tprint(f\"({cost[i][j]}) \", end=\"\")\n",
+    "\tprint()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nodes: A E H F C \n",
+      "Color: B B B B B \n",
+      "Dist.: 0 5 2 25 7 \n",
+      "Prev.: - A A E H \n"
+     ]
+    }
+   ],
+   "source": [
+    "queue = []\n",
+    "visited = []\n",
+    "colour = [0] * 5\n",
+    "d = [0] * 5\n",
+    "p = [None] * 5\n",
+    "start = 0\n",
+    "colour[start] = 1\n",
+    "queue.append(start)\n",
+    "while queue:\n",
+    "\tcurrent_node = queue.pop(0)\n",
+    "\tvisited.append(current_node)\n",
+    "\tfor i, child_of_current in enumerate(AdjMatrix[current_node]):\n",
+    "\t\tif child_of_current == 1:\n",
+    "\t\t\tif colour[i] == 0:\n",
+    "\t\t\t\tcolour[i] = 1\n",
+    "\t\t\t\tqueue.append(i)\n",
+    "\t\t\t\td[i] = d[current_node] + cost[current_node][i]\n",
+    "\t\t\t\tp[i] = current_node\n",
+    "\n",
+    "\tcolour[current_node] = 2\n",
+    "\tPrintTable()"
    ]
   }
  ],
